fix: 数据库主键更换 主键：UUID -> SnowFlake（Aurora精简版） 加快运行速度同时修复前端功能
